Fix newsletter check alignment issue

--- a/homepage.css
+++ b/homepage.css
@@ -566,6 +566,13 @@ label {
   text-align: left;
   font-size: 2.3em;
 }
+.newsletter {
+  padding: 1rem;
+  font-size: 0.75rem;
+  flex-direction: row;
+  align-items: center;
+  gap: 4px;
+}
 fieldset {
   display: flex;
   justify-content: flex-start;
